--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "consola": "^2.15.3",
+    "datjs": "^0.0.1",
+    "default-passive-events": "^2.0.0",
     "element-plus": "^2.2.19",
     "normalize.css": "^8.0.1",
     "particlesjs": "^2.2.3",
