--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview --port 4176",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
@@ -39,6 +40,7 @@
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.0.9",
     "vite-plugin-style-import": "^2.0.0",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.9",
+    "husky": "^8.0.0"
   }
 }
